[gd_scene load_steps=13 format=3 uid="uid://botxsi4lgxj86"]

[ext_resource type="Script" path="res://scripts/TypingGame.gd" id="1_ccvb4"]
[ext_resource type="Texture2D" uid="uid://bvtfyf633kvnt" path="res://assets/backgrounds/computer_screen.png" id="2_tgf5e"]
[ext_resource type="FontFile" uid="uid://dab72xrxcy66n" path="res://assets/fonts/ADELIA.ttf" id="3_jd03j"]
[ext_resource type="Theme" uid="uid://dgmupo6i6mfix" path="res://themes/DefaultTextTheme.tres" id="4_nlemc"]
[ext_resource type="PackedScene" path="res://scenes/pencil_timer.tscn" id="5_51hud"]
[ext_resource type="AudioStream" uid="uid://bg3ovso7q2cx3" path="res://assets/blip_sounds/blip1.wav" id="6_b700c"]
[ext_resource type="AudioStream" uid="uid://bonsut1eymhj8" path="res://assets/blip_sounds/blip2.wav" id="7_5yso1"]
[ext_resource type="AudioStream" uid="uid://w8jgh2gvysew" path="res://assets/blip_sounds/blip3.wav" id="8_yiogj"]
[ext_resource type="AudioStream" uid="uid://beuynjpgc3rvr" path="res://assets/blip_sounds/blip4.wav" id="9_yhtww"]
[ext_resource type="AudioStream" uid="uid://dqnuiy5vv3pwx" path="res://assets/blip_sounds/blip5.wav" id="10_1wt4k"]
[ext_resource type="AudioStream" uid="uid://dxwklbmumu55" path="res://assets/blip_sounds/blip6.wav" id="11_oh8g6"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_8ql5i"]
streams_count = 6
stream_0/stream = ExtResource("6_b700c")
stream_0/weight = 1.0
stream_1/stream = ExtResource("7_5yso1")
stream_1/weight = 1.0
stream_2/stream = ExtResource("8_yiogj")
stream_2/weight = 1.0
stream_3/stream = ExtResource("9_yhtww")
stream_3/weight = 1.0
stream_4/stream = ExtResource("10_1wt4k")
stream_4/weight = 1.0
stream_5/stream = ExtResource("11_oh8g6")
stream_5/weight = 1.0

[node name="TypingGame" type="Node"]
script = ExtResource("1_ccvb4")

[node name="Background" type="TextureRect" parent="."]
z_index = -2
offset_left = 2.0
offset_top = 6.0
offset_right = 1920.0
offset_bottom = 1076.0
texture = ExtResource("2_tgf5e")

[node name="TitleInstruction" type="RichTextLabel" parent="."]
offset_left = 629.0
offset_top = 10.0
offset_right = 1262.0
offset_bottom = 152.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 35
theme_override_fonts/normal_font = ExtResource("3_jd03j")
theme_override_font_sizes/normal_font_size = 100
bbcode_enabled = true
text = "TYPE FAST"

[node name="GameText" type="RichTextLabel" parent="."]
offset_left = 336.0
offset_top = 405.0
offset_right = 1525.0
offset_bottom = 942.0
theme = ExtResource("4_nlemc")
theme_override_colors/default_color = Color(0.643137, 0.635294, 0.231373, 1)
theme_override_constants/outline_size = 30
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[color=RED]TEXT HERE"

[node name="PencilTimer" parent="." instance=ExtResource("5_51hud")]

[node name="BlipSound" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_8ql5i")
